# echo

./: .gitignore  .traeignore  AGENTS.md  LICENSE  app.py  pyproject.toml
.trae/: settings.json  tasks.json
.trae/agents/: code-reviewer.md  debug-error.md
.trae/rules/: project_rules.md  voice_pipeline.md
.trae/skills/debug-error/: SKILL.md
.trae/skills/review-pr/: SKILL.md
docs/: architecture.md
tests/: test_app.py
